--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,15 @@
 			<artifactId>importsource-conf</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.importsource.commmon</groupId>
+			<artifactId>common-io</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.importsource.log4jc</groupId>
+			<artifactId>importsource-log4jc</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
